@@ -1,5 +1,6 @@
 0.8.5
 * From now on every "payment.zip" contains also the unsigned raw transaction file ("tx2sign.txt")
+* Added a cache for address balances to speed up switching between wallets
 
 0.8.4
 * Support for JoinCoin sort of transaction in the wallet
